--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,4 +20,4 @@ steps:
 - name: 'gcr.io/cloud-builders/mvn'
   args: ['package']
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['app', 'deploy', 'team9/cloudbuild.yaml']
+  args: ['app', 'deploy', 'cloudbuild.yaml']
