--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,8 +19,8 @@
 steps:
 - id: 'Stage app using mvn appengine plugin on mvn cloud build image'
   name: 'gcr.io/cloud-builders/mvn'
-  args: ['package', 'appengine:stage']
+  args: ['package']
 - id: "Deploy to app engine using gcloud image"
   name: 'gcr.io/cloud-builders/gcloud'
-  args: ['app', 'deploy', 'workspace/cloudbuild.yaml']
+  args: ['app', 'deploy']
 timeout: '1600s'
