--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,11 +16,9 @@
 #   env:
 #     - "GOOGLE_CLOUD_PROJECT=team9"
 
+# cloudbuild.yaml
 steps:
-- id: 'Stage app using mvn appengine plugin on mvn cloud build image'
-  name: 'gcr.io/cloud-builders/mvn'
+- name: 'gcr.io/cloud-builders/mvn'
   args: ['package']
-- id: "Deploy to app engine using gcloud image"
-  name: 'gcr.io/cloud-builders/gcloud'
-  args: ['app', 'deploy']
-timeout: '1600s'
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['app', 'deploy', 'workplace/appengine-web.xml']
