--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,5 +20,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/mvn'
   args: ['package']
+  dir: 'Team9'
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['app', 'deploy', 'appengine-web.xml']
+  args: ['app', 'deploy', 'Team9/appengine-web.xml']
