--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,7 +19,6 @@
 # cloudbuild.yaml
 steps:
 - name: 'gcr.io/cloud-builders/mvn'
-  args: ['package']
-  dir: 'Team9'
+  args: ['package', '.']
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['app', 'deploy', 'Team9/appengine-web.xml']
+  args: ['app', 'deploy', './appengine-web.xml']
