--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,6 +19,7 @@
 # cloudbuild.yaml
 steps:
 - name: 'gcr.io/cloud-builders/mvn'
-  args: ['package', 'markser/team9']
+  args: ['package']
+  dir: 'markser/team9'
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['app', 'deploy', 'markser/team9/appengine-web.xml']
