--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,4 +21,4 @@ steps:
 - name: 'gcr.io/cloud-builders/mvn'
   args: ['package']
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['app', 'deploy', '[testing/appengine-web.xml]']
+  args: ['app', 'deploy', 'testing/appengine-web.xml']
