--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,6 +19,6 @@
 # cloudbuild.yaml
 steps:
 - name: 'gcr.io/cloud-builders/mvn'
-  args: ['package', 'appengine;deploy']
-# - name: 'gcr.io/cloud-builders/gcloud'
-#   args: ['app', 'deploy', 'testing/appengine-web.xml']
+  args: ['package']
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['app', 'deploy', 'src\main\webapp\WEB-INF\appengine-web.xml']
