--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,5 +20,7 @@
 steps:
 - name: 'gcr.io/cloud-builders/mvn'
   args: ['package', 'appengine:deploy']
+    # env:
+    #   - "GOOGLE_CLOUD_PROJECT=team9"
 # - name: 'gcr.io/cloud-builders/gcloud'
 #   args: ['app', 'deploy', 'src\main\webapp\WEB-INF\appengine-web.xml']
