--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,8 +19,6 @@
 # cloudbuild.yaml
 steps:
 - name: 'gcr.io/cloud-builders/mvn'
-  args: ['package', 'appengine:deploy']
-    # env:
-    #   - "GOOGLE_CLOUD_PROJECT=team9"
-# - name: 'gcr.io/cloud-builders/gcloud'
-#   args: ['app', 'deploy', 'src\main\webapp\WEB-INF\appengine-web.xml']
+  args: ['package']
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['app', 'deploy', 'src\main\webapp\WEB-INF\appengine-web.xml']
